<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/state_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/state_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start_date_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/start_date_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/end_date_tabel_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/end_date_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/guide_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/guide_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tourist_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/tourist_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/points_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/points_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/routes_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/routes_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/state_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="" />

        <TextView
            android:id="@+id/start_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="" />

        <TextView
            android:id="@+id/end_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="" />

        <TextView
            android:id="@+id/guide_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="" />

        <TextView
            android:id="@+id/tourist_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:text="" />

        <TextView
            android:id="@+id/points_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:text="" />
    </GridLayout>

    <TextView
        android:id="@+id/routes_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <Button
        android:id="@+id/button_verify_with"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_verify_with"
        android:textAlignment="center"
        android:background="@drawable/button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_verify_without"
        app:layout_constraintEnd_toStartOf="@+id/button_verify_without"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_verify_without"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button"
        android:text="@string/button_verify_without"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_verify_with"
        app:layout_constraintTop_toBottomOf="@+id/routes_txt" />

</android.support.constraint.ConstraintLayout>