<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noContentLabel"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/routeStart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/route_start_label"
            app:layout_constraintBottom_toTopOf="@+id/routeEnd"
            app:layout_constraintEnd_toStartOf="@+id/routePoints"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="0.5" />

        <TextView
            android:id="@+id/routeEnd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/route_end_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/routePoints"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/routeStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routeStart"
            app:layout_constraintVertical_weight="0.5" />

        <TextView
            android:id="@+id/routePoints"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/routePointsLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addRoute"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toEndOf="@+id/routeEnd"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addRoute"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/addRouteDescription"
            android:padding="12dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toEndOf="@+id/routePoints"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_circle_black_24dp" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>