<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/gridL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/st_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tou_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/tourist_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/poin_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/points_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/st_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="" />

        <TextView
            android:id="@+id/tou_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="" />

        <TextView
            android:id="@+id/poin_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="" />

    </GridLayout>

    <TextView
        android:id="@+id/start_label_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridL" />

    <ImageView
        android:id="@+id/image_start"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_label_txt"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/end_label_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_start" />

    <ImageView
        android:id="@+id/image_end"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_label_txt"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/butt_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_discard"
        android:background="@drawable/button_discard"
        app:layout_constraintBaseline_toBaselineOf="@+id/butt_apply"
        app:layout_constraintEnd_toStartOf="@+id/butt_apply"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butt_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_accept"
        android:text="@string/button_accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/butt_discard"
        app:layout_constraintTop_toBottomOf="@+id/image_end" />

</android.support.constraint.ConstraintLayout>